[package]
name = "vibe-escrow"
version = "0.1.0"
description = "Vibe escrow smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vibe_escrow"

[features]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
solana-program = "1.16.24"
